# PeakViz

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
src/: absorption_plot_test.py  annotation_test.ipynb  annotation_test.py  dataloader.py  debug.py  imaging_sensor.py  point_sensor.py  pre_processing.py  r_parser.py  vizualization.py
src/peakviz/: dataloader.py  point_sensor.py
