[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peakviz"
version = "0.1.0"
description = "A tool to visualize Hyperspectral data from point and imaging sensors."
authors = [
    { name = "TabassumNova", email = "your.email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "PyQt5",
    "numpy",
    "matplotlib",
    "pandas",
    "plotly",
    "hylite"
]

[project.urls]
Homepage = "https://github.com/TabassumNova/PeakViz"
